# python-repository-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: Makefile  pyproject.toml
